force-app/main/default/objects/Taxonomy_Category__c/Taxonomy_Category__c.object-meta.xml
<CustomObject>
    <description>Records comprising the complete 2 level Taxonomy</description>
    <label>Taxonomy Category</label>
    <nameField>
        <label>Taxonomy Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxonomy Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>