force-app/main/default/objects/Taxonomy_Category__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>