force-app/main/default/objects/Taxonomy_Category__c/fields/CatPsort__c.field-meta.xml
<CustomField>
    <fullName>CatPsort__c</fullName>
    <description>Need to create a flow to populate this field</description>
    <label>CatPsort</label>
    <length>4</length>
    <type>Text</type>
</CustomField>