force-app/main/default/objects/Taxonomy_Category__c/fields/Parent_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Abbreviation__c</fullName>
    <label>Parent Abbreviation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>