force-app/main/default/objects/Taxonomy_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Category</label>
    <referenceTo>Taxonomy_Category__c</referenceTo>
    <relationshipLabel>Taxonomy Categories</relationshipLabel>
    <relationshipName>Taxonomy_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>