force-app/main/default/objects/Taxonomy_Category__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>Sort</label>
    <length>4</length>
    <type>Text</type>
</CustomField>