force-app/main/default/objects/Taxonomy_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Abbreviation__c</columns>
    <columns>Parent_Abbreviation__c</columns>
    <columns>Sort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>